force-app/main/default/objects/Product_Notification__c/Product_Notification__c.object-meta.xml
<CustomObject>
    <description>Used in Observer Pattern to notify users</description>
    <label>Product Notification</label>
    <nameField>
        <displayFormat>PN-{0000000}</displayFormat>
        <label>Product Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>