force-app/main/default/objects/Product_Notification__c/fields/Product_Catelog__c.field-meta.xml
<CustomField>
    <fullName>Product_Catelog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Catelog</label>
    <referenceTo>Product_Catelog__c</referenceTo>
    <relationshipLabel>Product Notifications</relationshipLabel>
    <relationshipName>Product_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>