force-app/main/default/objects/Product_Notification__c/fields/Subscribe__c.field-meta.xml
<CustomField>
    <fullName>Subscribe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribe</label>
    <type>Checkbox</type>
</CustomField>